--- a/authgear/templates/service.yaml
+++ b/authgear/templates/service.yaml
@@ -1,3 +1,4 @@
+# FIXME: Remove the following services
 # The ingresses we created are in the namespace "authgear-apps"
 # so we need to define the following so that
 # they can reference the Service in the namespace "authgear".
