--- a/authgear/values.yaml
+++ b/authgear/values.yaml
@@ -7,15 +7,17 @@ subcharts:
 authgear:
   appNamespace: "authgear-apps"
 
+  databaseURL: postgres://localhost
+  configSourceType: "kubernetes"
+  trustProxy: "true"
+  logLevel: "info"
+  sentryDSN: ""
+
   mainServer:
     image: __replace_me__
 
     env:
-      TRUST_PROXY: "true"
-      LOG_LEVEL: "info"
-      SENTRY_DSN: ""
       ADMIN_API_AUTH: "jwt"
-      CONFIG_SOURCE_TYPE: "kubernetes"
 
     resources:
       requests:
@@ -60,10 +62,6 @@ authgear:
         name: __replace_me__
 
     env:
-      DATABASE_URL: postgres://localhost
-      TRUST_PROXY: "true"
-      LOG_LEVEL: "info"
-      SENTRY_DSN: ""
       SMTP_HOST: __replace_me__
       SMTP_PORT: 587
       SMTP_MODE: normal
@@ -71,7 +69,6 @@ authgear:
       SMTP_PASSWORD: __replace_me__
       MAIL_SENDER: __replace_me__
       MAIL_REPLY_TO: __replace_me__
-      CONFIG_SOURCE_TYPE: "kubernetes"
       AUTHGEAR_APP_ID: __replace_me__
       AUTHGEAR_CLIENT_ID: __replace_me__
       AUTHGEAR_ENDPOINT: https://__replace_me__.example.com
