--- a/authgear/values.yaml
+++ b/authgear/values.yaml
@@ -17,7 +17,7 @@ authgear:
   analytic:
     cronjob:
       enabled: false
-      schedule: "0 1 * * 1"
+      weeklySchedule: "0 1 * * 1"
     databaseURL: postgres://localhost
     databaseSchema: public
     auditDatabaseURL: postgres://localhost
