--- a/authgear/templates/anaytic-cronjob.yaml
+++ b/authgear/templates/anaytic-cronjob.yaml
@@ -74,5 +74,72 @@ spec:
               name: analytic-weekly-script
           - name: google-sheets-secret-volume
             {{- toYaml .Values.authgear.analytic.googleSheetsSecret.volume | nindent 12 }}
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: analytic-monthly-script
+data:
+  entrypoint.sh: |-
+    #!/bin/bash
+
+    set -e
+
+    authgear-portal analytic collect-count last-month
+
+    authgear-portal analytic report project \
+      --period=last-month \
+      --google-client-credentials-file={{ .Values.authgear.analytic.googleSheetsSecret.path }}/client_credentials.json \
+      --google-token-file={{ .Values.authgear.analytic.googleSheetsSecret.path }}/token.json \
+      --output-type=google-sheets \
+      --google-spreadsheet-id={{ .Values.authgear.analytic.googleSpreadsheetID | quote }} \
+      --google-spreadsheet-range={{ .Values.authgear.analytic.googleSpreadsheetRange.projectMonthlyReport | quote }}
+---
+apiVersion: batch/v1beta1
+kind: CronJob
+metadata:
+  name: {{ include "authgear.nameAnalyticCronMonthly" . | quote }}
+  labels:
+    {{- include "authgear.labels" . | nindent 4 }}
+spec:
+  schedule: {{ .Values.authgear.analytic.cronjob.monthlySchedule | quote }}
+  concurrencyPolicy: Forbid
+  jobTemplate:
+    spec:
+      backoffLimit: 0
+      template:
+        spec:
+          containers:
+          - name: authgear-analytic-cronjob-monthly
+            image: {{ .Values.authgear.portalServer.image | quote }}
+            command:
+            - sh
+            - /bin/entrypoint.sh
+            volumeMounts:
+            - name: script-configmap-volume
+              mountPath: /bin/entrypoint.sh
+              readOnly: true
+              subPath: entrypoint.sh
+            - name: google-sheets-secret-volume
+              mountPath: {{ .Values.authgear.analytic.googleSheetsSecret.path | quote }}
+            env:
+            - name: DATABASE_URL
+              value: {{ .Values.authgear.analytic.databaseURL | quote }}
+            - name: DATABASE_SCHEMA
+              value: {{ .Values.authgear.analytic.databaseSchema | quote }}
+            - name: AUDIT_DATABASE_URL
+              value: {{ .Values.authgear.analytic.auditDatabaseURL | quote }}
+            - name: AUDIT_DATABASE_SCHEMA
+              value: {{ .Values.authgear.analytic.auditDatabaseSchema | quote }}
+            - name: ANALYTIC_REDIS_URL
+              value: {{ .Values.authgear.analytic.analyticRedisURL | quote }}
+          restartPolicy: Never
+          volumes:
+          - name: script-configmap-volume
+            configMap:
+              defaultMode: 0755
+              name: analytic-monthly-script
+          - name: google-sheets-secret-volume
+            {{- toYaml .Values.authgear.analytic.googleSheetsSecret.volume | nindent 12 }}
 {{ end }}
 {{ end }}
