--- a/authgear/templates/anaytic-cronjob.yaml
+++ b/authgear/templates/anaytic-cronjob.yaml
@@ -141,5 +141,60 @@ spec:
               name: analytic-monthly-script
           - name: google-sheets-secret-volume
             {{- toYaml .Values.authgear.analytic.googleSheetsSecret.volume | nindent 12 }}
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: analytic-daily-script
+data:
+  entrypoint.sh: |-
+    #!/bin/bash
+
+    set -e
+
+    authgear-portal analytic collect-count yesterday
+---
+apiVersion: batch/v1beta1
+kind: CronJob
+metadata:
+  name: {{ include "authgear.nameAnalyticCronDaily" . | quote }}
+  labels:
+    {{- include "authgear.labels" . | nindent 4 }}
+spec:
+  schedule: {{ .Values.authgear.analytic.cronjob.dailySchedule | quote }}
+  concurrencyPolicy: Forbid
+  jobTemplate:
+    spec:
+      backoffLimit: 0
+      template:
+        spec:
+          containers:
+          - name: authgear-analytic-cronjob-daily
+            image: {{ .Values.authgear.portalServer.image | quote }}
+            command:
+            - sh
+            - /bin/entrypoint.sh
+            volumeMounts:
+            - name: script-configmap-volume
+              mountPath: /bin/entrypoint.sh
+              readOnly: true
+              subPath: entrypoint.sh
+            env:
+            - name: DATABASE_URL
+              value: {{ .Values.authgear.analytic.databaseURL | quote }}
+            - name: DATABASE_SCHEMA
+              value: {{ .Values.authgear.analytic.databaseSchema | quote }}
+            - name: AUDIT_DATABASE_URL
+              value: {{ .Values.authgear.analytic.auditDatabaseURL | quote }}
+            - name: AUDIT_DATABASE_SCHEMA
+              value: {{ .Values.authgear.analytic.auditDatabaseSchema | quote }}
+            - name: ANALYTIC_REDIS_URL
+              value: {{ .Values.authgear.analytic.analyticRedisURL | quote }}
+          restartPolicy: Never
+          volumes:
+          - name: script-configmap-volume
+            configMap:
+              defaultMode: 0755
+              name: analytic-daily-script
 {{ end }}
 {{ end }}
