--- a/authgear/templates/authgear-portal-server.yaml
+++ b/authgear/templates/authgear-portal-server.yaml
@@ -199,6 +199,8 @@ spec:
           value: {{ printf "%s.%s" "{{ .AppID }}" .Values.authgear.baseHost | quote }}
         - name: APP_HOST_SUFFIX
           value: {{ printf ".%s" .Values.authgear.baseHost | quote }}
+        - name: KUBERNETES_APP_NAMESPACE
+          value: {{ .Values.authgear.appNamespace | quote }}
         {{- if not .Values.authgear.portalServer.env.SMTP_HOST  }}
         - name: SMTP_HOST
           value: {{ .Values.authgear.smtp.host | quote }}
