--- a/authgear/templates/authgear-portal-server.yaml
+++ b/authgear/templates/authgear-portal-server.yaml
@@ -201,6 +201,10 @@ spec:
           value: {{ printf ".%s" .Values.authgear.baseHost | quote }}
         - name: KUBERNETES_APP_NAMESPACE
           value: {{ .Values.authgear.appNamespace | quote }}
+        {{- if .Values.authgear.portalServer.customDomain.enabled }}
+        - name: DOMAIN_IMPLEMENTATION
+          value: kubernetes
+        {{- end }}
         {{- if not .Values.authgear.portalServer.env.SMTP_HOST  }}
         - name: SMTP_HOST
           value: {{ .Values.authgear.smtp.host | quote }}
