Introduce elasticsearch values

--- a/authgear/templates/authgear-portal-server.yaml
+++ b/authgear/templates/authgear-portal-server.yaml
@@ -201,6 +201,10 @@ spec:
           value: {{ printf ".%s" .Values.authgear.baseHost | quote }}
         - name: KUBERNETES_APP_NAMESPACE
           value: {{ .Values.authgear.appNamespace | quote }}
+        {{- if .Values.authgear.elasticsearch.enabled }}
+        - name: SEARCH_ENABLED
+          value: "true"
+        {{- end }}
         {{- if .Values.authgear.portalServer.customDomain.enabled }}
         - name: DOMAIN_IMPLEMENTATION
           value: kubernetes
