--- a/authgear/templates/analytic-cronjob.yaml
+++ b/authgear/templates/analytic-cronjob.yaml
@@ -1,5 +1,4 @@
 {{ if .Values.authgear.analytic.cronjob.enabled }}
-{{ if .Values.authgear.analytic.googleSheetsSecret.path }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -12,21 +11,23 @@ data:
 
     authgear-portal analytic collect-count last-week
 
+    {{ if .Values.authgear.analytic.googleSpreadsheet.enabled }}
     authgear-portal analytic report user \
       --period=last-week \
-      --google-client-credentials-file={{ .Values.authgear.analytic.googleSheetsSecret.path }}/client_credentials.json \
-      --google-token-file={{ .Values.authgear.analytic.googleSheetsSecret.path }}/token.json \
+      --google-client-credentials-file={{ .Values.authgear.analytic.googleSpreadsheet.secret.mountPath }}/client_credentials.json \
+      --google-token-file={{ .Values.authgear.analytic.googleSpreadsheet.secret.mountPath }}/token.json \
       --output-type=google-sheets \
-      --google-spreadsheet-id={{ .Values.authgear.analytic.googleSpreadsheetID | quote }} \
-      --google-spreadsheet-range={{ .Values.authgear.analytic.googleSpreadsheetRange.userWeeklyReport | quote }}
+      --google-spreadsheet-id={{ .Values.authgear.analytic.googleSpreadsheet.id | quote }} \
+      --google-spreadsheet-range={{ .Values.authgear.analytic.googleSpreadsheet.range.userWeeklyReport | quote }}
 
     authgear-portal analytic report project \
       --period=last-week \
-      --google-client-credentials-file={{ .Values.authgear.analytic.googleSheetsSecret.path }}/client_credentials.json \
-      --google-token-file={{ .Values.authgear.analytic.googleSheetsSecret.path }}/token.json \
+      --google-client-credentials-file={{ .Values.authgear.analytic.googleSpreadsheet.secret.mountPath }}/client_credentials.json \
+      --google-token-file={{ .Values.authgear.analytic.googleSpreadsheet.secret.mountPath }}/token.json \
       --output-type=google-sheets \
-      --google-spreadsheet-id={{ .Values.authgear.analytic.googleSpreadsheetID | quote }} \
-      --google-spreadsheet-range={{ .Values.authgear.analytic.googleSpreadsheetRange.projectWeeklyReport | quote }}
+      --google-spreadsheet-id={{ .Values.authgear.analytic.googleSpreadsheet.id | quote }} \
+      --google-spreadsheet-range={{ .Values.authgear.analytic.googleSpreadsheet.range.projectWeeklyReport | quote }}
+    {{ end }}
 ---
 apiVersion: batch/v1beta1
 kind: CronJob
@@ -54,7 +55,7 @@ spec:
               readOnly: true
               subPath: entrypoint.sh
             - name: google-sheets-secret-volume
-              mountPath: {{ .Values.authgear.analytic.googleSheetsSecret.path | quote }}
+              mountPath: {{ .Values.authgear.analytic.googleSpreadsheet.secret.mountPath | quote }}
             env:
             - name: DATABASE_URL
               value: {{ .Values.authgear.databaseURL | quote }}
@@ -73,7 +74,7 @@ spec:
               defaultMode: 0755
               name: {{ include "authgear.nameAnalyticCronWeeklyScript" . | quote }}
           - name: google-sheets-secret-volume
-            {{- toYaml .Values.authgear.analytic.googleSheetsSecret.volume | nindent 12 }}
+            {{- toYaml .Values.authgear.analytic.googleSpreadsheet.secret.volume | nindent 12 }}
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -87,13 +88,15 @@ data:
 
     authgear-portal analytic collect-count last-month
 
+    {{ if .Values.authgear.analytic.googleSpreadsheet.enabled }}
     authgear-portal analytic report project \
       --period=last-month \
-      --google-client-credentials-file={{ .Values.authgear.analytic.googleSheetsSecret.path }}/client_credentials.json \
-      --google-token-file={{ .Values.authgear.analytic.googleSheetsSecret.path }}/token.json \
+      --google-client-credentials-file={{ .Values.authgear.analytic.googleSpreadsheet.secret.mountPath }}/client_credentials.json \
+      --google-token-file={{ .Values.authgear.analytic.googleSpreadsheet.secret.mountPath }}/token.json \
       --output-type=google-sheets \
-      --google-spreadsheet-id={{ .Values.authgear.analytic.googleSpreadsheetID | quote }} \
-      --google-spreadsheet-range={{ .Values.authgear.analytic.googleSpreadsheetRange.projectMonthlyReport | quote }}
+      --google-spreadsheet-id={{ .Values.authgear.analytic.googleSpreadsheet.id | quote }} \
+      --google-spreadsheet-range={{ .Values.authgear.analytic.googleSpreadsheet.range.projectMonthlyReport | quote }}
+    {{ end }}
 ---
 apiVersion: batch/v1beta1
 kind: CronJob
@@ -121,7 +124,7 @@ spec:
               readOnly: true
               subPath: entrypoint.sh
             - name: google-sheets-secret-volume
-              mountPath: {{ .Values.authgear.analytic.googleSheetsSecret.path | quote }}
+              mountPath: {{ .Values.authgear.analytic.googleSpreadsheet.secret.mountPath | quote }}
             env:
             - name: DATABASE_URL
               value: {{ .Values.authgear.databaseURL | quote }}
@@ -140,7 +143,7 @@ spec:
               defaultMode: 0755
               name: {{ include "authgear.nameAnalyticCronMonthlyScript" . | quote }}
           - name: google-sheets-secret-volume
-            {{- toYaml .Values.authgear.analytic.googleSheetsSecret.volume | nindent 12 }}
+            {{- toYaml .Values.authgear.analytic.googleSpreadsheet.secret.volume | nindent 12 }}
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -196,5 +199,4 @@ spec:
             configMap:
               defaultMode: 0755
               name: {{ include "authgear.nameAnalyticCronDailyScript" . | quote }}
-{{ end }}
 {{ end }}
